crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__unstage_specs.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: deleted
---
{
  "data": {
    "unstageDraftSpecs": [
      "aliceCo/delete-me",
      "aliceCo/new"
    ]
  }
}
