crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__unstage_specs_outside_grants.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: unstaged
---
{
  "data": {
    "unstageDraftSpecs": [
      "aliceCo/data/foo",
      "otherCo/new"
    ]
  }
}
